@@ -1,24 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST openttd-1.4.0-source.tar.gz 10043877 SHA256 bc50bbf573c0799bdcdbb53b3a6bd091b988f8df0bf79c0e71ef3ebb112dce9c SHA512 f11f32a45084d285271e692bd1533b3fed901ed799224335101ee298e9b9144934490d84dd9642130f0ea9ec0166e4d5c6e4211a021fcd11d79146b78259a2a5 WHIRLPOOL 6b5ce23a99ce8571dc2245a056c01dfd7867ced3add70b64ab9de04122683527dde8cb2e929725e38421884198de8e233a975477b40e6626bb45583f9fe28bef
-DIST openttd-1.4.2-source.tar.gz 10066038 SHA256 3dcdbf6d4368bbbc3caeb1d0f06a26231580ebcdf3ac8abc6923be6043bb5e35 SHA512 9a356b3c1f56589a48cb80fdb0cfb9170d996a8301f3f541bc743a484315f71736ebf8354fc5576c3e02e6d7a724fe90cfb4811aeac0e67462ae02e805c0f9da WHIRLPOOL 7de171aef7d63a4340076f47647d8915969348d126031ebf7ef506161814eb15be69eeb962e58e264439a88012b3b5b30c6c47983633dcbd8c296aba010abb50
+DIST openttd-1.4.4-source.tar.gz 9726516 SHA256 e5b6b72e37b796ae8b532cd8c96bd27cb6c6b58ecc0e9a5a17a0a80442b5c36d SHA512 52ff5f52b511c3e222a0231c902b0763611f64d5c003c99e1c50af951688458c5c56bdc002ddd1e3c936ed920f64054e68074994fd273d2f3614a3779bad66e1 WHIRLPOOL dd7ac08a337df4554683f0f9275bb50cca169206b38f7ebfa20b6ec8a62125c8c38d444c78bd6a6230095a65e6e02b477fe8734d8b0e6ee9025008ed8058bbd8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJT+yQ5XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJUWf1eXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB599y8P/00zKTLwfwlMec/g48E3Qsgk
-eHgJRbjKrk/QBm6HaliW2ggOyXbPL+sqmpSAYgdCOVQR5/WoVNTe7/Kd0JjA8KPM
-+/ItCKq2LF1nUVQRLZZkJFYeaWxSrnUbETxlTLR9tdRBBKOlAbDDYls3G7veh97U
-OOTi4IW5IvVL3y30gC4CzCwAOcsLUhxUBE2PeUyG5dNrBDR6NwaLu5yPI4KdPUnA
-wLWwdU4Uv2P1iJyuZK76guWAuEA3B/qoS7Q5V2CzNeh5Ng+62hpiiC8lMwCmfDEo
-7NDOp2qokBj80c8bvm79BD3C/W7wpEw8pdgWcx/QDjvsE9f8ZZRP2Mfj2Ekhil9M
-EzR8vIYXNsMN95b3UVifhKovUaGbzLBoEms4B1jytCmJOz9nl6KyZ1cEYILHm1UR
-ie0IeuEufhXYe4T+cx8eeAwj5YXAM2Vs8UYNcTRodDp1/SCGT7ZIsHTqr319Phoq
-Up429w1sOgD5xC+LTATtZIhZkuSHWyAyqHRxl6XbjTjxwC1c7FgiccuUzqdv/SRJ
-H/Qv/bifPtmToy7QTbsDsntU4a0YuOcrNxpT0Tkh+AOuUeLanc/y70uCyRXLFSmd
-cXZPUZbGMCxK7MA7TD+L5uL+297sw8nGLH6wBlqChB0G2R8XoLNUg6qSS8yR5Czi
-fU2y7X+4KAwn6BBNNkFu
-=poYy
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59L98QAKhLNP387rHlfKqo2VmnT+NS
+3L/PXSDsr+0IXx4g4YXR2VuKHiEEmTlalhgOo7uPfNOaAJwA2rNluI07NKaLJEHV
+TFUmNAoq0RTNRjoHnkheZE2TvddQHxfZib7MvWpwWVOTHmkslkV9XZqi0EeXgnwh
+SXeZPGnBBjWFxzfDvcHb5F/gIjnM7h5+P8JhB9QaM6ipSjs0OJ8lGEezBwC7SPS6
+ZVpGOq0h1nYOvNCBQcbSLerUseU6k4hI5wfYJwkfkaCDmVVIGKf01QvdH0/ylJvm
+cFSmb9KtgchnYsR73bTGeBcWOFAr9ZMN4bsZg1U0M+KDq91Fwk/ZGnYeVqUtw8E2
+TnBXYywg8UTCWVcGbSCfO66BXYHb6L5JNpQss9mRIhHk1VHsSnXur190DtDEwX2p
+rzyUstUENhAk1HWmGKN+baz73btJLHx3+0jbtO5cKf9HUBwpNpfbVlGaMhhFgzka
+gj7HJiQq1WGvA4/qisBc14qhi49HE/QWTAut8mv1ADm4nED0bJJ+MtyYq5uOrF/Q
+SVqa/EZxXPcLYcSnS6tcmHCyWlZVcASU1GeK+qwFEn8sHQcVn9ufVmGv0yHxqvM7
+gq0MHzPwojGqnUz20WiDVJNgbJjsQAb/UE3e0i4GLt68la42ndbdZF+UwilXKp1U
+UYAXxoWExtPEIproSM/Y
+=lLEo
 -----END PGP SIGNATURE-----
